include/dss_capi.h

    /*! 
    Full name of object this Recloser is monitoring.
    */
    DSS_CAPI_DLL const char* Reclosers_Get_MonitoredObj(void);
    /*! 
    Terminal number of the controlled device being switched by the Recloser
    */
    DSS_CAPI_DLL int32_t Reclosers_Get_SwitchedTerm(void);
    /*! 
    Set monitored object by full name.
    */
    DSS_CAPI_DLL void Reclosers_Set_MonitoredObj(const char* Value);
    DSS_CAPI_DLL void Reclosers_Set_SwitchedTerm(int32_t Value);
    /*! 
    Number of fast shots
    */
    DSS_CAPI_DLL int32_t Reclosers_Get_NumFast(void);
    /*! 
    Array of Doubles: reclose intervals, s, between shots.
    */
    DSS_CAPI_DLL void Reclosers_Get_RecloseIntervals(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Number of shots to lockout (fast + delayed)
    */
    DSS_CAPI_DLL int32_t Reclosers_Get_Shots(void);
    DSS_CAPI_DLL void Reclosers_Set_NumFast(int32_t Value);
    DSS_CAPI_DLL void Reclosers_Set_Shots(int32_t Value);
    /*! 
    Phase trip curve multiplier or actual amps
    */
    DSS_CAPI_DLL double Reclosers_Get_PhaseTrip(void);
    /*! 
    Phase Trip multiplier or actual amps
    */
    DSS_CAPI_DLL void Reclosers_Set_PhaseTrip(double Value);
    /*! 
    Ground (3I0) instantaneous trip setting - curve multiplier or actual amps.
    */
    DSS_CAPI_DLL double Reclosers_Get_GroundInst(void);
    /*! 
    Ground (3I0) trip multiplier or actual amps
    */
    DSS_CAPI_DLL double Reclosers_Get_GroundTrip(void);
    /*! 
    Phase instantaneous curve multiplier or actual amps
    */
    DSS_CAPI_DLL double Reclosers_Get_PhaseInst(void);
    /*! 
    Ground (3I0) trip instantaneous multiplier or actual amps
    */
    DSS_CAPI_DLL void Reclosers_Set_GroundInst(double Value);
    DSS_CAPI_DLL void Reclosers_Set_GroundTrip(double Value);
    DSS_CAPI_DLL void Reclosers_Set_PhaseInst(double Value);
    /*! 
    Close the switched object controlled by the recloser. Resets recloser to first operation.
    */
    DSS_CAPI_DLL void Reclosers_Close(void);
    /*! 
    Open recloser's controlled element and lock out the recloser.
    */
    DSS_CAPI_DLL void Reclosers_Open(void);
    /*! 
    Get/Set the active Recloser by index into the recloser list.  1..Count
    */
    DSS_CAPI_DLL int32_t Reclosers_Get_idx(void);
    /*! 
    Get/Set the Active Recloser by index into the recloser list. 1..Count
    */
    DSS_CAPI_DLL void Reclosers_Set_idx(int32_t Value);