src/v7/CAPI_Reclosers.pas


function Reclosers_Get_MonitoredObj():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Reclosers_Get_MonitoredObj_AnsiString());
end;
//------------------------------------------------------------------------------
function Reclosers_Get_SwitchedTerm():Integer;cdecl;
var
  elem: TRecloserObj;
begin
  Result := 0;
  elem := RecloserClass.GetActiveObj  ;
  if elem <> nil then Result := elem.ElementTerminal  ;
end;
//------------------------------------------------------------------------------
procedure Reclosers_Set_MonitoredObj(const Value: PAnsiChar);cdecl;
var
  elem: TRecloserObj;
begin
  elem := RecloserClass.GetActiveObj ;
  if elem <> nil then Set_parameter('monitoredObj', Value);
end;
//------------------------------------------------------------------------------
procedure Reclosers_Set_SwitchedTerm(Value: Integer);cdecl;
var
  elem: TRecloserObj;
begin
  elem := RecloserClass.GetActiveObj ;
  if elem <> nil then Set_parameter('SwitchedTerm', IntToStr(Value));
end;
//------------------------------------------------------------------------------
function Reclosers_Get_NumFast():Integer;cdecl;
var
  elem: TRecloserObj;
begin
  Result := 0;
  elem := RecloserClass.ElementList.Active;  ;
  if elem <> nil then Result := elem.NumFast ;
end;
//------------------------------------------------------------------------------
PROCEDURE Reclosers_Get_RecloseIntervals(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
// return reclose intervals in seconds
VAR
  Result: PDoubleArray;
  elem: TRecloserObj;
  i, k: Integer;
Begin
  Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
  Result[0] := -1.0;
  IF ActiveCircuit <> Nil THEN
  Begin
      elem := RecloserClass.ElementList.Active;
      If elem <> Nil Then
      Begin
        DSS_RecreateArray_PDouble(Result, ResultPtr, ResultCount, (elem.NumReclose-1) + 1);
        k:=0;
        for i := 1 to elem.NumReclose  do
        Begin
            Result[k] := elem.RecloseIntervals ^[i];
            Inc(k);
        End;
      End;
  End;
end;
//------------------------------------------------------------------------------
function Reclosers_Get_Shots():Integer;cdecl;
var
  elem: TRecloserObj;
begin
  Result := 0;
  elem := RecloserClass.ElementList.Active;  ;
  if elem <> nil then Result := elem.NumReclose + 1;
end;
//------------------------------------------------------------------------------
procedure Reclosers_Set_NumFast(Value: Integer);cdecl;
var
  elem: TRecloserObj;
begin
  elem := RecloserClass.ElementList.Active  ;
  if elem <> nil then Set_parameter('numfast', IntToStr(Value));
end;
//------------------------------------------------------------------------------
procedure Reclosers_Set_Shots(Value: Integer);cdecl;
var
  elem: TRecloserObj;
begin
  elem := RecloserClass.ElementList.Active  ;
  if elem <> nil then Set_parameter('shots', IntToStr(Value));
end;
//------------------------------------------------------------------------------
function Reclosers_Get_PhaseTrip():Double;cdecl;
var
  elem: TRecloserObj;
begin
  Result := 0;
  elem := RecloserClass.ElementList.Active;
  if elem <> nil then Result := elem.PhaseTrip;
end;
//------------------------------------------------------------------------------
procedure Reclosers_Set_PhaseTrip(Value: Double);cdecl;
var
  elem: TRecloserObj;
begin
  elem := RecloserClass.ElementList.Active  ;
  if elem <> nil then Set_parameter('PhaseTrip', Format('%.g',[Value]));
end;
//------------------------------------------------------------------------------
function Reclosers_Get_GroundInst():Double;cdecl;
var
  elem: TRecloserObj;
begin
  Result := 0;
  elem := RecloserClass.ElementList.Active;
  if elem <> nil then Result := elem.GroundInst;
end;
//------------------------------------------------------------------------------
function Reclosers_Get_GroundTrip():Double;cdecl;
var
  elem: TRecloserObj;
begin
  Result := 0;
  elem := RecloserClass.ElementList.Active;
  if elem <> nil then Result := elem.GroundTrip;
end;
//------------------------------------------------------------------------------
function Reclosers_Get_PhaseInst():Double;cdecl;
var
  elem: TRecloserObj;
begin
  Result := 0;
  elem := RecloserClass.ElementList.Active;
  if elem <> nil then Result := elem.PhaseInst;
end;
//------------------------------------------------------------------------------
procedure Reclosers_Set_GroundInst(Value: Double);cdecl;
var
  elem: TRecloserObj;
begin
  elem := RecloserClass.ElementList.Active  ;
  if elem <> nil then Set_parameter('GroundInst', Format('%.g',[Value]));
end;
//------------------------------------------------------------------------------
procedure Reclosers_Set_GroundTrip(Value: Double);cdecl;
var
  elem: TRecloserObj;
begin
  elem := RecloserClass.ElementList.Active  ;
  if elem <> nil then Set_parameter('GroundTrip', Format('%.g',[Value]));
end;
//------------------------------------------------------------------------------
procedure Reclosers_Set_PhaseInst(Value: Double);cdecl;
var
  elem: TRecloserObj;
begin
  elem := RecloserClass.ElementList.Active  ;
  if elem <> nil then Set_parameter('Phaseinst', Format('%.g',[Value]));
end;
//------------------------------------------------------------------------------
procedure Reclosers_Close();cdecl;
var
  elem: TRecloserObj;
begin
  elem := RecloserClass.ElementList.Active  ;
  if elem <> nil then Set_parameter('Action', 'close');
end;
//------------------------------------------------------------------------------
procedure Reclosers_Open();cdecl;
var
  elem: TRecloserObj;
begin
  elem := RecloserClass.ElementList.Active  ;
  if elem <> nil then Set_parameter('Action', 'open');
end;
//------------------------------------------------------------------------------
function Reclosers_Get_idx():Integer;cdecl;
begin
    if ActiveCircuit <> Nil then
       Result := RecloserClass.ElementList.ActiveIndex
    else Result := 0;
end;
//------------------------------------------------------------------------------
procedure Reclosers_Set_idx(Value: Integer);cdecl;
Var
    pRecloser:TRecloserObj;
begin
    if ActiveCircuit <> Nil then   Begin
        pRecloser := RecloserClass.Elementlist.Get(Value);
        If pRecloser <> Nil Then ActiveCircuit.ActiveCktElement := pRecloser;
    End;
end;
//------------------------------------------------------------------------------
END.
